# OrbitForge

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
docs/: IMPLEMENTATION_AUDIT.md
scripts/: clean-heavy.sh  clean-local.sh  lean-dev.sh
src/: App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: barneshut.rs  commands.rs  galaxy.rs  gpu_gravity.rs  lib.rs  main.rs  physics.rs  procedural.rs  scenarios.rs  simulation.rs
src/audio/: AudioManager.ts
src/components/: BodyInfoPanel.tsx  ControlPanel.tsx  EnergyGraph.tsx  GravityAssistPanel.tsx  HohmannPanel.tsx  Minimap.tsx  MissionPanel.tsx  OrbitalElementsHUD.tsx  ProceduralGeneratorPanel.tsx  SaveLoadButtons.tsx  ScenarioSelector.tsx
src/interaction/: InteractionManager.ts
src/missions/: MissionDefinition.ts  missions.ts
src/renderer/: KeplerOverlay.ts  ParticleSystem.ts  ThreeRenderer.ts
src/utils/: gravityAssist.ts  hohmannTransfer.ts  lagrangePoints.ts  orbitalMechanics.ts  sharing.ts  videoRecorder.ts
