[package]
name = "orbitforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "orbitforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rand = "0.9"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
